--- a/taro/todoList/package.json
+++ b/taro/todoList/package.json
@@ -26,6 +26,7 @@
   "license": "MIT",
   "dependencies": {
     "@tarojs/components": "1.3.6",
+    "@tarojs/redux": "^1.3.6",
     "@tarojs/router": "1.3.6",
     "@tarojs/taro": "1.3.6",
     "@tarojs/taro-alipay": "1.3.6",
@@ -33,30 +34,32 @@
     "@tarojs/taro-swan": "1.3.6",
     "@tarojs/taro-tt": "1.3.6",
     "@tarojs/taro-weapp": "1.3.6",
+    "nerv-devtools": "^1.4.0",
     "nervjs": "^1.4.0",
-    "nerv-devtools": "^1.4.0"
+    "redux": "^4.0.2",
+    "redux-logger": "^3.0.6"
   },
   "devDependencies": {
-    "@types/react": "^16.4.6",
-    "@types/webpack-env": "^1.13.6",
     "@tarojs/plugin-babel": "1.3.6",
     "@tarojs/plugin-csso": "1.3.6",
     "@tarojs/plugin-stylus": "1.3.6",
     "@tarojs/plugin-uglifyjs": "1.3.6",
     "@tarojs/webpack-runner": "1.3.6",
+    "@types/react": "^16.4.6",
+    "@types/webpack-env": "^1.13.6",
+    "babel-eslint": "^8.2.3",
     "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
     "babel-plugin-transform-jsx-stylesheet": "^0.6.5",
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "babel-preset-env": "^1.6.1",
-    "babel-eslint": "^8.2.3",
     "eslint": "^5.16.0",
     "eslint-config-taro": "1.3.6",
-    "eslint-plugin-react": "^7.8.2",
     "eslint-plugin-import": "^2.12.0",
+    "eslint-plugin-react": "^7.8.2",
+    "eslint-plugin-taro": "1.3.6",
     "stylelint": "9.3.0",
     "stylelint-config-taro-rn": "1.3.6",
-    "stylelint-taro-rn": "1.3.6",
-    "eslint-plugin-taro": "1.3.6"
+    "stylelint-taro-rn": "1.3.6"
   }
 }
